<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".directory.ui.DirectoryFragment">

    <include
        android:id="@+id/layout_app_bar"
        layout="@layout/app_bar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_sort_by"
        style="@style/SubHeaderStyle"
        android:drawableStart="@drawable/ic_hashtag_16dp"
        android:drawableEnd="@drawable/ic_arrow_down"
        android:drawablePadding="10dp"
        android:paddingStart="@dimen/screen_edge_left_and_right_margins"
        android:paddingEnd="@dimen/screen_edge_left_and_right_margins"
        android:text="@string/msg_channels"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_app_bar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_sort_by" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/view_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:indicatorColor="?colorLoading"
        app:indicatorName="BallPulseIndicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_sort_by"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>