...
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="?android:attr/homeAsUpIndicator">

        <TextView
            android:id="@+id/text_toolbar_title"
            android:scrollbars="horizontal"
            android:singleLine="true"
            android:ellipsize="none"
            android:maxWidth="200dp"
            style="@style/ChatRoom.ChatName.TextView"
            android:layout_width="wrap_content"
...
