<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inviteusers.ui.InviteUsersFragment">

    <EditText
        android:id="@+id/text_invite_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_at_black_20dp"
        android:drawablePadding="16dp"
        android:hint="@string/msg_invite_members"
        android:inputType="text"
        android:maxLines="1"
        android:padding="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_member"
        style="@style/Widget.MaterialComponents.Chip.Entry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:visibility="gone"
        app:chipSpacing="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_invite_users" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button_invite_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_group_member" />

    <TextView
        android:id="@+id/text_member_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_member_not_found"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/button_invite_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_group_member"
        tools:visibility="visible" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/view_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:indicatorColor="@color/colorBlack"
        app:indicatorName="BallPulseIndicator"
        app:layout_constraintBottom_toTopOf="@+id/button_invite_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_group_member"
        tools:visibility="visible" />

    <android.widget.Button
        android:id="@+id/button_invite_user"
        style="?borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="@dimen/screen_edge_left_and_right_margins"
        android:background="@color/colorAccent"
        android:drawableStart="@drawable/ic_add_white_24dp"
        android:foreground="?selectableItemBackground"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/msg_invite_users"
        android:textColor="@color/color_white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>