<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:paddingBottom="@dimen/member_item_top_and_bottom_padding"
    android:paddingEnd="@dimen/screen_edge_left_and_right_padding"
    android:paddingStart="@dimen/screen_edge_left_and_right_padding"
    android:paddingTop="@dimen/member_item_top_and_bottom_padding">

    <include
        android:id="@+id/layout_avatar"
        layout="@layout/avatar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_member"
        style="@style/Sender.Name.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/layout_avatar"
        app:layout_constraintLeft_toRightOf="@+id/layout_avatar"
        app:layout_constraintTop_toTopOf="@+id/layout_avatar"
        tools:text="Ronald Perkins" />

</android.support.constraint.ConstraintLayout>