...
    <string name="message_role_add">%1$s was set %2$s by %3$s</string>
    <string name="message_role_removed">%1$s is no longer %2$s by %3$s</string>
    <string name="message_video_call_started">Video call started by %1$s</string>

    <!-- Message actions -->
    <string name="action_msg_reply">Reply</string>
    <string name="action_info">Info</string>
    <string name="action_msg_edit">Edit</string>
    <string name="action_msg_copy">Copy</string>
    <string name="action_msg_quote">Quote</string>
    <string name="action_msg_delete">Delete</string>
    <string name="action_pin">Pin</string>
    <string name="action_unpin">Unpin</string>
...
    <!-- Notifications -->
    <string name="share_label">Edit shared message</string>
    <string name="notif_action_reply_hint">REPLY</string>
    <string name="notif_error_sending">Reply has failed. Please try again.</string>
    <string name="notif_success_sending">Message sent to %1$s!</string>
    <string name="read_by">Read by</string>
    <string name="message_information_title">Message information</string>
    <string name="message_room_changed_privacy">Room type changed to: %1$s by %2$s</string>

    <string name="foss" translatable="false">(FOSS)</string>

    <!-- User Details -->
    <string name="timezone">Timezone</string>
...
